--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -69,10 +69,10 @@
       ],
       "metadata": {
         "id": "cfaWho47RGDf",
-        "outputId": "d8d3d77f-9142-496e-c828-4086e4d1d9c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d8d3d77f-9142-496e-c828-4086e4d1d9c6"
       },
       "execution_count": 1,
       "outputs": [
@@ -277,10 +277,10 @@
       "execution_count": 6,
       "metadata": {
         "id": "z8O6z-wVcPEF",
-        "outputId": "06357aaf-9718-4deb-c559-91261f296ae3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "06357aaf-9718-4deb-c559-91261f296ae3"
       },
       "outputs": [
         {
@@ -2741,10 +2741,10 @@
       ],
       "metadata": {
         "id": "EMEDk5byzxY5",
-        "outputId": "697ee74d-ef71-418a-d0dc-9741e6f82168",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "697ee74d-ef71-418a-d0dc-9741e6f82168"
       },
       "execution_count": 4,
       "outputs": [
@@ -2881,11 +2881,11 @@
         "PY\n"
       ],
       "metadata": {
-        "id": "eUJKjkk2EK2-",
-        "outputId": "0c8d317c-ac7d-4d8d-e9f5-ad1ddd793232",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eUJKjkk2EK2-",
+        "outputId": "0c8d317c-ac7d-4d8d-e9f5-ad1ddd793232"
       },
       "execution_count": 7,
       "outputs": [
@@ -2952,10 +2952,10 @@
       ],
       "metadata": {
         "id": "4letvP7X12ji",
-        "outputId": "64576680-7cca-489b-f13a-120c47892521",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "64576680-7cca-489b-f13a-120c47892521"
       },
       "execution_count": 8,
       "outputs": [
@@ -3028,11 +3028,11 @@
         "PY\n"
       ],
       "metadata": {
-        "id": "6EN8ueikETqA",
-        "outputId": "4a6dab10-c25d-4a1e-98f5-c00cbdf60507",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6EN8ueikETqA",
+        "outputId": "4a6dab10-c25d-4a1e-98f5-c00cbdf60507"
       },
       "execution_count": 9,
       "outputs": [
@@ -3092,11 +3092,11 @@
         "fi"
       ],
       "metadata": {
-        "id": "fDpcySxJEZ7R",
-        "outputId": "1816cb75-30c1-4039-c31c-9a418345907c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fDpcySxJEZ7R",
+        "outputId": "1816cb75-30c1-4039-c31c-9a418345907c"
       },
       "execution_count": 10,
       "outputs": [
@@ -3177,10 +3177,10 @@
       "execution_count": null,
       "metadata": {
         "id": "8bbpob1gTPlo",
-        "outputId": "eb0e2602-b113-487a-e955-0448b1d9bb62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4ee1e2a9-8414-46eb-a202-5d236170a878"
       },
       "outputs": [
         {
@@ -3409,7 +3409,128 @@
             "                   all        239        568      0.758      0.726      0.783      0.349\n",
             "\n",
             "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
-            "\u001b[K     34/100      6.92G      1.622      1.279      1.666         67        960: 15% ━╸────────── 18/119 2.4it/s 7.1s<41.6s"
+            "\u001b[K     34/100      6.92G      1.579      1.241      1.647         55        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 46.9s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.6it/s 5.8s\n",
+            "                   all        239        568      0.744      0.725       0.76      0.316\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     35/100      6.96G      1.583      1.215       1.65         53        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.4s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.9it/s 5.2s\n",
+            "                   all        239        568      0.765      0.695       0.75      0.324\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     36/100         7G      1.575      1.227      1.637         34        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.7s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.5s\n",
+            "                   all        239        568      0.745      0.722      0.744      0.345\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     37/100      7.04G      1.572      1.209      1.658         37        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 46.0s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.6s\n",
+            "                   all        239        568      0.759      0.626      0.724      0.328\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     38/100      7.08G      1.547      1.181      1.631         65        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.1s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.6s\n",
+            "                   all        239        568      0.677      0.738      0.746      0.332\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     39/100      7.12G      1.534      1.149      1.612         48        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.2s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.9it/s 5.2s\n",
+            "                   all        239        568      0.729      0.678      0.739      0.342\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     40/100      7.16G      1.512      1.168      1.602         91        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 46.7s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.9it/s 5.2s\n",
+            "                   all        239        568      0.711      0.732      0.774      0.335\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     41/100       7.2G      1.513      1.148      1.581         44        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.1s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.6s\n",
+            "                   all        239        568      0.792      0.739      0.812      0.356\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     42/100      7.24G      1.482      1.119      1.579         61        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.4s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.5it/s 6.1s\n",
+            "                   all        239        568      0.747      0.736      0.781      0.321\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     43/100      7.28G       1.46        1.1       1.58         27        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 46.1s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.4it/s 6.2s\n",
+            "                   all        239        568      0.671      0.782      0.751      0.323\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     44/100      7.32G      1.502      1.142      1.597         38        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.8s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.6it/s 5.7s\n",
+            "                   all        239        568       0.78      0.737      0.769      0.332\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     45/100      7.36G      1.486      1.105      1.574         35        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.4s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.9it/s 5.1s\n",
+            "                   all        239        568      0.765        0.7      0.766      0.327\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     46/100      5.13G      1.433      1.052      1.548         36        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 46.3s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.6s\n",
+            "                   all        239        568      0.672      0.771      0.773      0.331\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     47/100      5.99G      1.478      1.114       1.57         35        960: 100% ━━━━━━━━━━━━ 119/119 2.4it/s 48.8s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.3it/s 6.5s\n",
+            "                   all        239        568      0.797      0.709      0.783      0.328\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     48/100      5.99G      1.438      1.057      1.541         49        960: 100% ━━━━━━━━━━━━ 119/119 2.4it/s 48.9s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 3.0it/s 4.9s\n",
+            "                   all        239        568      0.745      0.714      0.754      0.337\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     49/100      5.99G      1.433      1.063      1.547         41        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 46.9s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.6s\n",
+            "                   all        239        568      0.815       0.72      0.798      0.349\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     50/100      5.99G      1.405      1.029       1.53         30        960: 100% ━━━━━━━━━━━━ 119/119 2.4it/s 49.1s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.5it/s 6.0s\n",
+            "                   all        239        568       0.77      0.695       0.77      0.349\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     51/100      5.99G      1.408      1.009      1.511         28        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 46.4s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.5it/s 6.1s\n",
+            "                   all        239        568      0.789       0.72      0.767       0.34\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     52/100      5.99G      1.373      1.025      1.525         63        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 45.6s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.4it/s 6.3s\n",
+            "                   all        239        568      0.727      0.755      0.784      0.331\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     53/100      5.99G      1.405      1.055      1.511         42        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 48.1s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.9it/s 5.2s\n",
+            "                   all        239        568      0.742      0.747      0.774      0.325\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     54/100      6.01G      1.356      0.973      1.497         41        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 46.8s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 3.0it/s 5.0s\n",
+            "                   all        239        568      0.757      0.693       0.76      0.332\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     55/100      6.05G      1.369     0.9805        1.5         60        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.6s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 3.2it/s 4.7s\n",
+            "                   all        239        568      0.767       0.77      0.803       0.32\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     56/100      6.09G      1.359     0.9775      1.491         56        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 47.5s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.7it/s 5.5s\n",
+            "                   all        239        568      0.661      0.734       0.73      0.323\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     57/100      6.13G      1.368     0.9539      1.479         31        960: 100% ━━━━━━━━━━━━ 119/119 2.6it/s 46.2s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 15/15 2.2it/s 7.0s\n",
+            "                   all        239        568      0.709      0.759      0.779      0.331\n",
+            "\n",
+            "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n",
+            "\u001b[K     58/100      6.17G      1.344     0.9676      1.478         22        960: 100% ━━━━━━━━━━━━ 119/119 2.5it/s 46.9s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 13% ━╸────────── 2/15 1.1it/s 0.9s<11.4s"
           ]
         }
       ],
